# tdtxt-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
examples/: todo.txt
src/: lib.rs  main.rs  opt.rs  task.rs
